# advent-of-code-2025

./: .gitignore  LICENSE  README.md  fetch-input.sh  pyproject.toml
.github/workflows/: push.yml
01/: dial.py  main.py  test_dial.py
02/: main.py  pattern.py  test_pattern.py
03/: main.py  max_num.py  test_max_num.py
04/: grid.py  main.py  test_grid.py
05/: ingredients.py  main.py  test_ingredients.py
06/: main.py  op_matrix.py  test_op_matrix.py
07/: main.py  manifold.py  test_manifold.py
08/: box.py  main.py  test_box.py
09/: main.py  test_tiles.py
09/tiles/: __init__.py  floor.py  rect.py  tile.py
10/: machine.py  main.py  test_machine.py
11/: graph.py  main.py  test_graph.py
12/: main.py  test_presents.py
12/presents/: __init__.py  parse.py  region.py  shape.py
