[project]
name = "advent-of-code-2025"
authors = [
    {name = "Niklas Bettgen", email = "niklas@bettgen.de"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "black>=25.11.0",
    "isort>=7.0.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
format.composite = [
    "isort .",
    "black ."
]
test = "pytest"

[tool.black]
line-length = 100
