[project]
name = "advent-of-code-2025"
authors = [
    {name = "Niklas Bettgen", email = "niklas@bettgen.de"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "black>=25.11.0",
    "isort>=7.0.0",
    "pytest-unordered>=0.7.0",
    "pylint>=4.0.4",
    "flake8>=7.3.0",
    "Flake8-pyproject>=1.2.4",
    "mypy>=1.19.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
day = "python ./{args}/main.py"
format.composite = [
    "isort .",
    "black ."
]
lint.composite = [
    "flake8 ./{args}",
    "mypy ./{args}",
    "pylint ./{args}"
]
test = "pytest"
input = "./fetch-input.sh {args}"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "unspecified-encoding"
]
ignore-paths = '.venv/'
